--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -10,20 +10,142 @@ html, body{
 header{
 	position: relative;
     z-index: 200;
-    height: 60px;
+    height: 120px;
     width: 100%;
     top: 0;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    
+    #logo{ 
+    
+   		float: left;
+		display: block;
+		height: 59px;	
+    
+    	img{
+			display: block;
+			margin-top: 10px;
+		}
+		
+    }
+    
+    #menu{
+		float: left;
+		
+		a{
+		
+			float: left;
+			display: block;
+			height: 59px;
+			line-height: 59px;
+			font-size: 14px;
+			font-weight: normal;
+			margin-left: 20px;
+			color: $cor-principal;
+			font-weight: bold;
+			padding-top: 3px;
+			text-decoration: none;
+			
+			span{
+				float: left;
+				margin-right: 10px;
+				line-height: 55px;
+				height: 55px;
+			}
+		}
+		a.ativo{
+			text-decoration: none;
+			border-top: 3px solid $cor-principal;
+			color: #0065ae;
+			padding-top: 0;
+		}
+		a:hover{
+			text-decoration: none;
+			border-top: 3px solid $cor-principal;
+			color: #0065ae;
+			padding-top: 0;
+		}
+		
+	}
+	#barraTopo{
+		background: $cor-principal;
+		float: left;
+		height: 61px;
+		font-weight: bold;
+		line-height: 61px;
+		color: #FFF;
+		
+		#buscaTopo{
+			margin: 12px auto;	
+			width: 30%;
+			float: right;
+			color: #333333;
+			border: 1px solid #fff;
+			-webkit-border-top-left-radius: 3px;
+			-webkit-border-bottom-left-radius: 3px;
+			-moz-border-radius-topleft: 3px;
+			-moz-border-radius-bottomleft: 3px;
+			border-top-left-radius: 3px;
+			border-bottom-left-radius: 3px;
+			-webkit-border-top-right-radius: 0px;
+			-webkit-border-bottom-right-radius: 0px;
+			-moz-border-radius-topright: 0px;
+			-moz-border-radius-bottomright: 0px;
+			border-top-right-radius: 0px;
+			border-bottom-right-radius: 0px;
+			box-shadow: none;
+			color: #0065ae;
+		}
+		#tituloBusca{
+			float: right;
+			height: 59px;
+			font-weight: bold;
+			line-height: 59px;
+			color: #FFF;
+			margin-right: 10px;
+		}
+		#iconeBusca{
+			color: $cor-principal;
+			float: right;
+			background-color: #FFF;
+			height: 34px;
+			margin-top: 11px;
+			line-height: 34px;
+		  	width: 20px;
+			-webkit-border-top-right-radius: 3px;
+			-webkit-border-bottom-right-radius: 3px;
+			-moz-border-radius-topright: 3px;
+			-moz-border-radius-bottomright: 3px;
+			border-top-right-radius: 3px;
+			border-bottom-right-radius: 3px;
+		}
+		::-webkit-input-placeholder {
+		   color: $cor-principal;
+		}
+		
+		:-moz-placeholder { 
+		   color: $cor-principal;  
+		}
+		
+		::-moz-placeholder { 
+		   color: $cor-principal;  
+		}
+		
+		:-ms-input-placeholder {  
+		   color: $cor-principal;  
+		}
+	}
 }
 #contentContainer{
 	position: relative;
     width: 100%;
-    height: -webkit-calc(100% - 60px);
-    height: -moz-calc(100% - 60px);
-    height: calc(100% - 60px);
+    height: -webkit-calc(100% - 120px);
+    height: -moz-calc(100% - 120px);
+    height: calc(100% - 120px);
     overflow: hidden;
     background: #ffffff;
 }
+
+
 
