--- a/src/main/webapp/views/mapa.html
+++ b/src/main/webapp/views/mapa.html
@@ -1,1 +1,1 @@
-<leaflet defaults="defaults" center="center" width="100%" height="100%"></leaflet>
+<leaflet defaults="defaults" markers="anunciosMarkers" center="center" width="100%" height="100%"></leaflet>
