ajuste estilo fontes

--- a/src/main/webapp/views/mapa.html
+++ b/src/main/webapp/views/mapa.html
@@ -5,31 +5,31 @@
        	<span>Ative um ou mais filtros</span>
        	<span class="glyphicon glyphicon-menu-down" id="setaFiltro" enable-menu></span>
          	
-       	<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por preço" ng-show="filtro.preco.ativo" ng-click="limparFiltro('preco')">
+       	<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por preço" ng-show="filtro.preco.ativo" ng-click="limparFiltro('preco')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroPreco"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por Km" ng-show="filtro.km.ativo" ng-click="limparFiltro('km')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por Km" ng-show="filtro.km.ativo" ng-click="limparFiltro('km')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroKm"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por ano" ng-show="filtro.ano.ativo" ng-click="limparFiltro('ano')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por ano" ng-show="filtro.ano.ativo" ng-click="limparFiltro('ano')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroCalendar"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por marca" ng-show="filtro.marca.ativo" ng-click="limparFiltro('marca')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por marca" ng-show="filtro.marca.ativo" ng-click="limparFiltro('marca')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroMarca"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por quant. de portas" ng-show="filtro.portas.ativo" ng-click="limparFiltro('portas')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por quant. de portas" ng-show="filtro.portas.ativo" ng-click="limparFiltro('portas')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroPorta"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por estado do automóvel" ng-show="filtro.estado.ativo" ng-click="limparFiltro('estado')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por estado do automóvel" ng-show="filtro.estado.ativo" ng-click="limparFiltro('estado')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroEstado"></span>
 		</div>
-		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Limpar filtro por fotos" ng-show="filtro.fotos.ativo" ng-click="limparFiltro('fotos')">
+		<div class="btnClearFilter" tooltip-placement="bottom" tooltip="Remover filtro por fotos" ng-show="filtro.fotos.ativo" ng-click="limparFiltro('fotos')">
 			<span class="closeFilter"></span>
 			<span class="iconeFiltroTopo filtroFoto"></span>
 		</div>
