--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -46,12 +46,18 @@ header{
 			font-weight: bold;
 			padding-top: 3px;
 			text-decoration: none;
+			-webkit-user-select: none;
+		    -moz-user-select: none;
+		    -ms-user-select: none;
 			
 			span{
 				float: left;
 				margin-right: 10px;
 				line-height: 55px;
 				height: 55px;
+				-webkit-user-select: none;
+			    -moz-user-select: none;
+			    -ms-user-select: none;
 			}
 		}
 		a.ativo{
@@ -77,6 +83,9 @@ header{
 	font-weight: bold;
 	line-height: 61px;
 	color: #FFF;
+	-webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 	
 	#buscaTopo{
 		margin: 12px auto;	
@@ -290,32 +299,50 @@ header{
 	padding-left: 5px;
 	float: left;
 	height: 35px;
-	border-radius: 2px;
-	background: #d9d9d9;
+	border-radius: 3px;
 	box-shadow: none;
-	border:none;
+	border: 1px solid #d6d6d6;
+	color: #4c4a4a;
+	background: #f1f1f1;
 }
 .btnFiltro{
 	float: left;
 	margin-top: 30px;
-	background-color: #5acebd;
-	border:none;
-	color: #FFF;
-	font-size: 13px;
-	width: 50%;
+	background-color: transparent;
+	width: 120px;
 	height: 40px;
 	line-height: 40px;
+	border:1px solid #5acebd;
+	color: #5acebd;
+	font-size: 13px;
+	font-weight:normal;
+	border-radius:3px;
+	
+	&:hover{
+		color:#FFF;
+		background-color: #5acebd;
+		text-shadow: 0px 1px 0px #34aa99;
+	}
 }
 .btnLimparFiltro{
 	float: left;
 	margin-top: 30px;
-	background-color: #e05050;
-	width: 50%;
+	background-color: transparent;
+	width: 120px;
 	height: 40px;
 	line-height: 40px;
-	border:none;
-	color: #FFF;
+	border:1px solid #e05050;
+	color: #e05050;
 	font-size: 13px;
+	font-weight:normal;
+	margin-right: 10px;
+	border-radius:3px;
+	
+	&:hover{
+		color:#FFF;
+		background-color: #e05050;
+		text-shadow: 0px 1px 0px #c64343;
+	}
 }
 .selectFiltro{
 	width: 100%;
