--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -6,6 +6,10 @@ body {
 }
 html, body{
     height: 100%;
+    font-family: $fonte-padrao;
+    font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
 }
 header{
 	position: relative;
@@ -39,11 +43,10 @@ header{
 			display: block;
 			height: 59px;
 			line-height: 59px;
-			font-size: 14px;
-			font-weight: normal;
+			font-size: 1em;
+			font-weight: 300;
 			margin-left: 20px;
 			color: $cor-principal;
-			font-weight: bold;
 			padding-top: 3px;
 			text-decoration: none;
 			-webkit-user-select: none;
@@ -80,7 +83,6 @@ header{
 	background: $cor-principal;
 	float: left;
 	height: 61px;
-	font-weight: bold;
 	line-height: 61px;
 	color: #FFF;
 	-webkit-user-select: none;
@@ -111,7 +113,6 @@ header{
 	#tituloBusca{
 		float: right;
 		height: 59px;
-		font-weight: bold;
 		line-height: 59px;
 		color: #FFF;
 		margin-right: 10px;
@@ -199,7 +200,6 @@ header{
 #filtroTopo{
 	float: left;
 	height: 59px;
-	font-weight: bold;
 	line-height: 59px;
 	color: #FFF;
 	z-index: 100000;
@@ -288,7 +288,6 @@ header{
 	line-height: 55px;
 	text-transform: uppercase;
 	color: #0065ae;
-	font-weight: bold;
 	font-size: 12px;
 	padding: 0px;
 	margin: 0;
