--- a/src/main/webapp/sources/sass/_definitions.scss
+++ b/src/main/webapp/sources/sass/_definitions.scss
@@ -1,4 +1,4 @@
 
-$fonte-padrao:  sans-serif, Arial;
+$fonte-padrao: 'Roboto', Arial, sans-serif;
 $cor-fonte-padrao: #e5e5e5;
 $cor-principal: #0065ae;
