--- a/src/main/webapp/views/mapa.html
+++ b/src/main/webapp/views/mapa.html
@@ -138,5 +138,5 @@
 </div>
 
 <div id="containerMapa">
-	<leaflet defaults="defaults" markers="anunciosMarkers" center="center" width="100%" height="100%"></leaflet>
+	<leaflet defaults="defaults" markers="anunciosMarkers" layers="layers" center="center" width="100%" height="100%"></leaflet>
 </div>
