--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -17,6 +17,7 @@ header{
     height: 60px;
     width: 100%;
     top: 0;
+    border-bottom: 1px solid $cor-principal;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -68,6 +69,7 @@ header{
 			border-top: 3px solid $cor-principal;
 			color: #0065ae;
 			padding-top: 0;
+			font-weight:500;
 		}
 		a:hover{
 			text-decoration: none;
@@ -377,7 +379,7 @@ header{
     height: -moz-calc(100% - 60px);
     height: calc(100% - 60px);
     overflow: hidden;
-    background: #ffffff;
+    background: #F7F7F7;
 }
 #containerMapa{
 	position: relative;
