--- a/src/main/webapp/views/cadastro.html
+++ b/src/main/webapp/views/cadastro.html
@@ -1,2 +1,59 @@
 <meta charset="UTF-8">
-<h1>{{title}}</h1>
+
+<div class="container">
+	
+	<h3 class="page-header">Dados Pessoais</h3>
+	
+	<div class="formContainer">
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label for="nome" class="col-sm-3 control-label">Nome</label>
+			    <div class="col-sm-6">
+					<input type="text" class="form-control" id="nome" placeholder="Seu Nome">
+			    </div>
+			</div>
+			<div class="form-group">
+				<label for="sobrenome" class="col-sm-3 control-label">Sobre Nome</label>
+				<div class="col-sm-6">
+					<input type="email" class="form-control" id="sobrenome" placeholder="Seu Sobre Nome">
+				</div>
+			</div>	
+			<div class="form-group">
+				<label for="cpf" class="col-sm-3 control-label">Cpf</label>
+				<div class="col-sm-6">
+					<input type="text" class="form-control" id="cpf" placeholder="Seu CPF">
+				</div>
+			</div>			
+			<div class="form-group">
+				<label for="telefone" class="col-sm-3 control-label">Telefone</label>
+				<div class="col-sm-6">
+					<input type="tel" class="form-control" id="telefone" placeholder="Seu Telefone">
+				</div>
+			</div>			
+			<div class="form-group">
+				<label for="celular" class="col-sm-3 control-label">Celular</label>
+				<div class="col-sm-6">
+					<input type="tel" class="form-control" id="celular" placeholder="Seu Celular">
+				</div>
+			</div>			
+			<div class="form-group">
+				<label for="celular" class="col-sm-3 control-label">WhatsApp?</label>
+				<div class="radio col-sm-1">
+					<label> 
+						<input type="radio" name="whatsapp" value="1" checked> Sim
+					</label>
+				</div>
+				<div class="radio col-sm-1">
+					<label>
+						<input type="radio" name="whatsapp" value="0" > Não
+					</label>
+				</div>
+			</div>			
+			<div class="form-group">
+				<div class="col-sm-9">
+					<button type="submit" class="btn btnCadastro">Cadastrar</button>
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
