--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -338,16 +338,15 @@ header{
 	width: 120px;
 	height: 40px;
 	line-height: 40px;
-	border:1px solid #5acebd;
-	color: #5acebd;
+	border:1px solid #35b7ce;
+	color: #35b7ce;
 	font-size: 13px;
 	font-weight:normal;
 	border-radius:3px;
 	
 	&:hover{
 		color:#FFF;
-		background-color: #5acebd;
-		text-shadow: 0px 1px 0px #34aa99;
+		background-color: #35b7ce;
 	}
 }
 .btnLimparFiltro{
