--- a/src/main/webapp/views/cadastro.html
+++ b/src/main/webapp/views/cadastro.html
@@ -1,10 +1,10 @@
 <meta charset="UTF-8">
 
-<div class="row col-sm-6 col-sm-offset-3">
+<div class="col-sm-6 col-sm-offset-3">
 	
 	<div class="page-header">
 		<h3 class="text-center">Dados Pessoais</h3>
-		<span class="help-block text-center">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+		<span class="help-block text-center">Preencha os campos do formulário abaixo com suas informações pessoais.</span>
 	</div>
 	
 	<div class="formContainer">
