--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -87,16 +87,16 @@ header{
 			border-bottom: 3px solid $cor-principal;
 			color: #0065ae;
 			padding-top: 0;
-			height: 38px;
-    		line-height: 50px;
+			height: 39px;
+    		line-height: 52px;
 		}
 		a:hover{
 			text-decoration: none;
 			border-bottom: 3px solid $cor-principal;
 			color: #0065ae;
 			padding-top: 0;
-			height: 38px;
-    		line-height: 50px;
+			height: 39px;
+    		line-height: 52px;
 			-webkit-transition: border-color 0.5s ease;
 			-moz-transition: border-color 0.5s ease;
 			-o-transition: border-color 0.5s ease;
@@ -420,16 +420,18 @@ header{
 	width: 120px;
 	height: 40px;
 	line-height: 40px;
-	border:1px solid #35b7ce;
+	border:1px solid $cor-principal;
 	color: #FFF;
 	font-size: 13px;
 	font-weight:normal;
 	border-radius:3px;
 	padding:0;
-	background-color: #35b7ce;
+	background-color: $cor-principal;
+	text-decoration: none;
 	
 	&:hover{
-		background-color: #1aa4bc;
+		background-color: #0482d6;
+		border:1px solid #0482d6;
 		color: #FFF;
 		-webkit-transition: background-color 0.5s ease;
 		-moz-transition: background-color 0.5s ease;
@@ -455,7 +457,7 @@ header{
 	    font-weight: 200;
 	    
 	    &:focus{
-   	 		border: 1px solid #35b7ce;
+   	 		border: 1px solid $cor-principal;
    	 		box-shadow: none;
 	    }
     }    
